--- a/templates/login.html
+++ b/templates/login.html
@@ -39,7 +39,9 @@
             </div>
             <input type="submit" value="Continue">
         </form>
-        <p>Don't have an account? <a href="/register">Sign up</a></p>
+        <div class="register-link">
+            Don't have an account? <a href="{{ url_for('register') }}">Sign up</a>
+        </div>
         <div class="divider">
             <hr>
             <span>or</span>
