--- a/templates/register.html
+++ b/templates/register.html
@@ -94,7 +94,9 @@
             </div>
             <input type="submit" value="Register">
         </form>
-        <p>Already have an account? <a href="/login">Log in</a></p>
+        <div class="login-link">
+            Already have an account? <a href="{{ url_for('login') }}">Sign in</a>
+        </div>
         <div class="divider">
             <hr>
             <span>or</span>
